--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="create_notification">Create notification</string>
     <string name="notification_title">Hello World</string>
     <string name="notification_text">This is my first notification!</string>
+    <string name="channel_name">channel one</string>
+    <string name="channel_description">channel one description</string>
 </resources>
