--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="notification_text">This is my first notification!</string>
     <string name="channel_name">channel one</string>
     <string name="channel_description">channel one description</string>
+    <string name="button_request_permission">Request Permission</string>
 </resources>
